--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,12 +1,8 @@
-.container {
+body {
   margin: 0 auto;
-  max-width: 1200px;
-  padding: 30px;
-
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  max-width: 80%;
 }
+
 
 .content {
   flex-grow: 1;
